syntax = "proto3";

option csharp_namespace = "server.api.gRPC.Customer";

package Customer;

import "google/api/annotations.proto";
import "gRPC/Protos/shared.proto";

service Product {
	rpc GetProducts (GetProductsRequest) returns (GetProductsReply){
		option (google.api.http) = {
			get: "/api/products"
		};
	}
}

message GetProductsRequest {
	optional uint64 id = 2;
	optional shared.Pagination p = 3;
}

message GetProductsReply {
<<<<<<< HEAD
	repeated ProductMessage products = 1;
	int32 count = 2;
=======
	repeated shared.ListedProductMessage products = 1;
	int64 count = 2;
>>>>>>> 769bbb0989f28bbcdeb68b6f83b11f894ed51ea4
}
